--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="#projects" data-after="Projects">プロジェクト</a></li>
             <li><a href="#about" data-after="About">私について</a></li>
             <li><a href="#contact" data-after="Contact">コンタクト</a></li>
-						<li class="language"><a href="https://nikitospol.github.io/My-Website/" class="lang">jp</a></li>
+						<li class="languagejp"><a href="en.html" class="lang">jp</a></li>
           </ul>
         </div>
       </div>
