--- a/en.html
+++ b/en.html
@@ -112,7 +112,19 @@
           <div class="project-img">
             <img src="./img/project5.png" alt="img">
           </div>
-
+        </div>
+				<div class="project-item">
+          <div class="project-info">
+            <h1>Project 6</h1>
+            <h2>Mini-cart</h2>
+            <p>
+							In this project, was created custom version of the mini shopping cart of the website. The design is based on the example of the original page. The project includes adding and removing items, recalculation of goods, opening the cart by the item button and by the cart button, as well as adaptive layout.
+						</p>
+						<a target="_blank" href="https://nikitospol.github.io/TestMinicart/" type="button" class="cta1">View</a>
+          </div>
+          <div class="project-img">
+            <img src="./img/project6.png" alt="img">
+          </div>
         </div>
 
 
