--- a/index.html
+++ b/index.html
@@ -116,7 +116,19 @@
           <div class="project-img">
             <img src="./img/project5.png" alt="img">
           </div>
-
+        </div>
+				<div class="project-item">
+          <div class="project-info">
+            <h1>プロジェクト 6</h1>
+            <h2>ミニカート</h2>
+            <p>
+							このプロジェクトでは、Webサイトのミニショッピングカートの特注版を作成しました。デザインは、元ページの例を参考にしています。このプロジェクトでは、アイテムの追加と削除、商品の再計算、アイテムボタンとカートボタンでカートを開くこと、および適応的なレイアウトが含まれています。
+						</p>
+						<a target="_blank" href="https://nikitospol.github.io/TestMinicart/" type="button" class="cta1">続きを見る</a>
+          </div>
+          <div class="project-img">
+            <img src="./img/project6.png" alt="img">
+          </div>
         </div>
 
 
