--- a/en.html
+++ b/en.html
@@ -126,6 +126,19 @@
             <img src="./img/project6.png" alt="img">
           </div>
         </div>
+				<div class="project-item">
+          <div class="project-info">
+            <h1>Project 7</h1>
+            <h2>Flappy Bird</h2>
+            <p>
+							In this project I tried to use only JS to recreate an infamous game.
+						</p>
+						<a target="_blank" href="https://nikitospol.github.io/FlappyBird/" type="button" class="cta1">View</a>
+          </div>
+          <div class="project-img">
+            <img src="./img/project7.png" alt="img">
+          </div>
+        </div>
 
 
       </div>
@@ -150,7 +163,7 @@
 					Developer who can decorate any of your website. 
 					I really like to study and try something new, to create sites that are truly pleasant to the eye and easy to use. At the moment, I have completed online courses in HTML&CSS based on Stepik and am increasingly immersed in the field of web development. I am learning new different visualization methods by CSS and JS.
 					In addition, I also have many different hobbies. I have been practicing karate for 16 years, I have 3 dan. I am also fond of modeling and board games. I really like to travel.<p>
-        <a target="_blank" href="https://drive.google.com/file/d/1N8YSNdxNKJiNTi56D3HeI4dCATiduq7Z/view?usp=sharing" class="cta">Download Resume</a>
+        <a target="_blank" href="https://drive.google.com/file/d/1bzjjn00QA04v31VhYOkVEdSSJtWus8O0/view?usp=sharing" class="cta">Download Resume</a>
       </div>
     </div>
   </section>
