--- a/index.html
+++ b/index.html
@@ -130,6 +130,19 @@
             <img src="./img/project6.png" alt="img">
           </div>
         </div>
+				<div class="project-item">
+          <div class="project-info">
+            <h1>プロジェクト 7</h1>
+            <h2>フラッピーバード</h2>
+            <p>
+							このプロジェクトでは、JSだけで象徴的なゲームを再現することに挑戦しています。 
+						</p>
+						<a target="_blank" href="https://nikitospol.github.io/FlappyBird/" type="button" class="cta1">続きを見る</a>
+          </div>
+          <div class="project-img">
+            <img src="./img/project7.png" alt="img">
+          </div>
+        </div>
 
 
       </div>
@@ -152,7 +165,7 @@
         <h2>フロントエンド開発者</h2>
         <p>みんなさん、こんにちわ！　私は23歳です。初心者のフロントエンドウェブ開発者のに、あなたのウェブサイトを飾ることができます。そして 本当に見た目が良くて使いやすいサイトを作るために、何か新しいことを勉強して試すのが大好きです。現在、StepikをベースにしたHTML&CSSのオンラインコースを修了しており、Web開発の分野にどんどん没頭しています。 CSSとJSによる新しい視覚化手法を学んでいます。また、趣味もたくさんあります。 例えば、私は16年間空手を練習していて、3段あります。 さらにモデリングやボードゲームも好きです。 そして旅行が大好きです。
 					<p>
-        <a target="_blank" href="https://drive.google.com/file/d/1N8YSNdxNKJiNTi56D3HeI4dCATiduq7Z/view?usp=sharing" class="cta">履歴書をダウンロード</a>
+        <a target="_blank" href="https://drive.google.com/file/d/1bzjjn00QA04v31VhYOkVEdSSJtWus8O0/view?usp=sharing" class="cta">履歴書をダウンロード</a>
       </div>
     </div>
   </section>
