--- a/index.html
+++ b/index.html
@@ -59,92 +59,37 @@
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>プロジェクト 1</h1>
-            <h2>武道館</h2>
-            <p>奥行きのあるスライドの動きを模した、見事な3Dスクロールアニメーションを搭載したWebサイト。カスタムアニメーション、滑らかさ、CSSを使った美しいデザイン構成、そしてページ自体に音声や動画のコンテンツがあります。 
+            <h1>ギャラリー</h1>
+            <p>このコーナーでは、主にCSSをベースにした、珍しい、美しい、面白いギャラリーを紹介します。 
 						</p>
-						<a target="_blank" href="https://nikitospol.github.io/Budo/" type="button" class="cta1">続きを見る</a>
+						<a target="_blank" href="galleryJp.html" type="button" class="cta1">全て見る</a>
           </div>
           <div class="project-img">
-            <img src="./img/project1.png" alt="img">
+            <img src="./img/galleries.png" alt="img">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>プロジェクト 2</h1>
-            <h2>全ロシアから手選手権大会</h2>
-            <p>滑らかな動きのあるアニメーション、ピュアCSSによるメイソンタイル形式のシンプルなコンテンツデザイン、ダークOSテーマ(Dark Mode)への対応などを実現したウェブサイトです。また、類似サイト向けにプリローダーを開発しました。
+            <h1>ゲーム</h1>
+            <p>このセクションには、シンプルで面白いゲームが含まれています。すべてのゲームは、サードパーティのソフトウェアを使用せずに、純粋なJSで作られています。
 						</p>
-						<a target="_blank" href="https://nikitospol.github.io/Russian-cup/" type="button" class="cta1">続きを見る</a>
+						<a target="_blank" href="gameJp.html" type="button" class="cta1">全て見る</a>
           </div>
           <div class="project-img">
-            <img src="./img/project2.png" alt="img">
+            <img src="./img/games/project7.png" alt="img">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>プロジェクト 3</h1>
-            <h2>空手の練習と試合用品</h2>
-            <p>HTML、CSS、JavaScriptを使ったクールな3Dシーン。背景のアニメーション、シーン照明のきらめき、人工物の3D回転効果、カスタムキュービックベジェスライドスイッチ効果など、面白いレイアウトテクニックが生み出されています。
+            <h1>ウェブサイト</h1>
+            <p>このセクションでは、WebサイトやFigmaに関連するプロジェクトを紹介します。例えば、さまざまなウェブサイトのレイアウトや、ミニショッピングカートのようなプロジェクトが含まれます。
 						</p>
-						<a target="_blank" href="https://nikitospol.github.io/Karate/" type="button" class="cta1">続きを見る</a>
+						<a target="_blank" href="webJp.html" type="button" class="cta1">全て見る</a>
           </div>
           <div class="project-img">
-            <img src="./img/project3.png" alt="img">
+            <img src="./img/Web/project5.png" alt="img">
           </div>
         </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>プロジェクト 4</h1>
-            <h2>東京</h2>
-            <p>ギャラリーはスクロール時にパララックス効果で行われ、クリックすると画像が開いたり閉じたりするアニメーションが作成されます。画像の色に呼応し、ある色から別の色にぼやけるアニメーション背景。トリガーは、コンポジションの非表示、タイトル、テキストをアニメーション化するために作成されます。CSSによるテキストグラデーション。文字にカーソルを合わせると言語が切り替わります。
-					 	</p>
-						<a target="_blank" href="https://nikitospol.github.io/Tokyo/" type="button" class="cta1">続きを見る</a>
-          </div>
-          <div class="project-img">
-            <img src="./img/project4.png" alt="img">
-          </div>
-        </div>
-				<div class="project-item">
-          <div class="project-info">
-            <h1>プロジェクト 5</h1>
-            <h2>旅行</h2>
-            <p>FigmaによるWebサイトのレイアウト。ハンバーガー」を加えたアダプティブレイアウト。
-						</p>
-						<a target="_blank" href="https://nikitospol.github.io/travel/" type="button" class="cta1">続きを見る</a>
-          </div>
-          <div class="project-img">
-            <img src="./img/project5.png" alt="img">
-          </div>
-        </div>
-				<div class="project-item">
-          <div class="project-info">
-            <h1>プロジェクト 6</h1>
-            <h2>ミニカート</h2>
-            <p>
-							このプロジェクトでは、Webサイトのミニショッピングカートの特注版を作成しました。デザインは、元ページの例を参考にしています。このプロジェクトでは、アイテムの追加と削除、商品の再計算、アイテムボタンとカートボタンでカートを開くこと、および適応的なレイアウトが含まれています。
-						</p>
-						<a target="_blank" href="https://nikitospol.github.io/TestMinicart/" type="button" class="cta1">続きを見る</a>
-          </div>
-          <div class="project-img">
-            <img src="./img/project6.png" alt="img">
-          </div>
-        </div>
-				<div class="project-item">
-          <div class="project-info">
-            <h1>プロジェクト 7</h1>
-            <h2>フラッピーバード</h2>
-            <p>
-							このプロジェクトでは、JSだけで象徴的なゲームを再現することに挑戦しています。 
-						</p>
-						<a target="_blank" href="https://nikitospol.github.io/FlappyBird/" type="button" class="cta1">続きを見る</a>
-          </div>
-          <div class="project-img">
-            <img src="./img/project7.png" alt="img">
-          </div>
-        </div>
-
-
       </div>
 
 
