--- a/en.html
+++ b/en.html
@@ -66,7 +66,7 @@
 						<a target="_blank" href="https://nikitospol.github.io/Budo/" type="button" class="cta1">View</a>
           </div>
           <div class="project-img">
-            <img src="./img/project1.png" alt="img">
+            <img src="./img/gallery/project1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -77,7 +77,7 @@
 						<a target="_blank" href="https://nikitospol.github.io/Russian-cup/" type="button" class="cta1">View</a>
           </div>
           <div class="project-img">
-            <img src="./img/project2.png" alt="img">
+            <img src="./img/gallery/project2.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -88,7 +88,7 @@
 						<a target="_blank" href="https://nikitospol.github.io/Karate/" type="button" class="cta1">View</a>
           </div>
           <div class="project-img">
-            <img src="./img/project3.png" alt="img">
+            <img src="./img/gallery/project3.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -99,7 +99,7 @@
 						<a target="_blank" href="https://nikitospol.github.io/Tokyo/" type="button" class="cta1">View</a>
           </div>
           <div class="project-img">
-            <img src="./img/project4.png" alt="img">
+            <img src="./img/gallery/project4.png" alt="img">
           </div>
         </div>
 				<div class="project-item">
@@ -110,7 +110,7 @@
 						<a target="_blank" href="https://nikitospol.github.io/travel/" type="button" class="cta1">View</a>
           </div>
           <div class="project-img">
-            <img src="./img/project5.png" alt="img">
+            <img src="./img/Web/project5.png" alt="img">
           </div>
         </div>
 				<div class="project-item">
@@ -123,7 +123,7 @@
 						<a target="_blank" href="https://nikitospol.github.io/TestMinicart/" type="button" class="cta1">View</a>
           </div>
           <div class="project-img">
-            <img src="./img/project6.png" alt="img">
+            <img src="./img/Web/project6.png" alt="img">
           </div>
         </div>
 				<div class="project-item">
@@ -136,7 +136,7 @@
 						<a target="_blank" href="https://nikitospol.github.io/FlappyBird/" type="button" class="cta1">View</a>
           </div>
           <div class="project-img">
-            <img src="./img/project7.png" alt="img">
+            <img src="./img/games/project7.png" alt="img">
           </div>
         </div>
 
