--- a/en.html
+++ b/en.html
@@ -139,6 +139,18 @@
             <img src="./img/games/project7.png" alt="img">
           </div>
         </div>
+				<div class="project-item">
+          <div class="project-info">
+            <h1>Project 8</h1>
+            <h2>Password Generator</h2>
+            <p>
+							After learning React.js, I tried to create a password generator for websites. This project is created entirely on React.js, it allows you to choose the length of the password and use special characters. And also there is an opportunity to copy the password at once.						</p>
+						<a target="_blank" href="https://nikitospol.github.io/Password-Generator/" type="button" class="cta1">View</a>
+          </div>
+          <div class="project-img">
+            <img src="./img/Web/passwordGenerator.png" alt="img">
+          </div>
+        </div>
 
 
       </div>
