--- a/webJp.html
+++ b/webJp.html
@@ -28,6 +28,14 @@
 				<div class="cursor__image" style="background-image: url(img/Web/project6.png)"></div>
 			</div>
 		</a>
+		<a target="_blank" href="https://nikitospol.github.io/Password-Generator/" class="magic-list__item">
+			<div class="magic-list__header">パスワードジェネレータ</div>
+			<h2 class="magic-list__text">React.jsを学んだ後、Webサイト用のパスワードジェネレータを作成してみました。このプロジェクトはすべてReact.jsで作成されており、パスワードの長さを選択したり、特殊文字を使用したりすることが可能です。また、パスワードを一度にコピーする機会もあります。</h2>
+			<p>続きを見る</p>
+			<div class="cursor">
+				<div class="cursor__image" style="background-image: url(img/Web/passwordGenerator.png)"></div>
+			</div>
+		</a>
 	</div>
 </body>
 </html>
