--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <h2>フロントエンド開発者</h2>
         <p>みんなさん、こんにちわ！　私は23歳です。初心者のフロントエンドウェブ開発者のに、あなたのウェブサイトを飾ることができます。そして 本当に見た目が良くて使いやすいサイトを作るために、何か新しいことを勉強して試すのが大好きです。現在、StepikをベースにしたHTML&CSSのオンラインコースを修了しており、Web開発の分野にどんどん没頭しています。 CSSとJSによる新しい視覚化手法を学んでいます。また、趣味もたくさんあります。 例えば、私は16年間空手を練習していて、3段あります。 さらにモデリングやボードゲームも好きです。 そして旅行が大好きです。
 					<p>
-        <a target="_blank" href="https://drive.google.com/file/d/1RyjR0J90C9EX5uZhNKM5vxQdKgmBjepK/view?usp=sharing" class="cta">履歴書をダウンロード</a>
+        <a target="_blank" href="https://drive.google.com/file/d/1cDSBm1M9Qch-a7eNWeK0nmZaSV4Rmejp/view?usp=sharing" class="cta">履歴書をダウンロード</a>
       </div>
     </div>
   </section>
@@ -141,7 +141,7 @@
           <div class="icon"><img src="img/map_120805.svg" /></div>
           <div class="contact-info">
             <h1>住所</h1>
-            <h2>埼玉県さいたま市大宮区 2-278-2</h2>
+            <h2>東京都台東区三筋　１－１－１７</h2>
           </div>
         </div>
       </div>
