--- a/en.html
+++ b/en.html
@@ -175,7 +175,7 @@
 					Developer who can decorate any of your website. 
 					I really like to study and try something new, to create sites that are truly pleasant to the eye and easy to use. At the moment, I have completed online courses in HTML&CSS based on Stepik and am increasingly immersed in the field of web development. I am learning new different visualization methods by CSS and JS.
 					In addition, I also have many different hobbies. I have been practicing karate for 16 years, I have 3 dan. I am also fond of modeling and board games. I really like to travel.<p>
-        <a target="_blank" href="https://drive.google.com/file/d/1RyjR0J90C9EX5uZhNKM5vxQdKgmBjepK/view?usp=sharing" class="cta">Download Resume</a>
+        <a target="_blank" href="https://drive.google.com/file/d/1cDSBm1M9Qch-a7eNWeK0nmZaSV4Rmejp/view?usp=sharing" class="cta">Download Resume</a>
       </div>
     </div>
   </section>
@@ -206,7 +206,7 @@
           <div class="icon"><img src="img/map_120805.svg" /></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2>埼玉県さいたま市大宮区 2-278-2</h2>
+            <h2>東京都台東区三筋　1-1-17</h2>
           </div>
         </div>
       </div>
